navbar: fix social icons hanging below header on small screens
As a consequence of the large font sizes the social icons were
hanging below the header on smaller screens (around 400px width,
approx.).

Fix that by adapting the font size for smaller screens. This should
fix the hanging issue at least for screen widths approx. upto 320px.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -760,3 +760,15 @@ table > tfoot > tr.success > th {
   background-color: #dff0d8;
 }
 
+/*
+ * Some font-size tweaks for smaller screens
+ */
+@media screen and (max-width: 480px) {
+  header nav {
+    font-size: 75%;
+  }
+
+  header nav ul.main li {
+    font-size: 90%;
+  }
+}
